// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App matches snapshot 1`] = `
<DocumentFragment>
  <article
    class="app"
  >
    <header>
      <h2>
        Pokedex Nova
      </h2>
    </header>
    <nav>
      <ul>
        <li>
          <a
            href="/"
          >
            Home
          </a>
        </li>
        <li>
          <a
            href="/other"
          >
            Other
          </a>
        </li>
      </ul>
    </nav>
    <section>
      <div>
        Loading...
      </div>
    </section>
    <footer>
      © Anthony Williams 2022
    </footer>
  </article>
</DocumentFragment>
`;

exports[`App when loaded matches snapshot 1`] = `
<DocumentFragment>
  <article
    class="app"
  >
    <header>
      <h2>
        Pokedex Nova
      </h2>
    </header>
    <nav>
      <ul>
        <li>
          <a
            href="/"
          >
            Home
          </a>
        </li>
        <li>
          <a
            href="/other"
          >
            Other
          </a>
        </li>
      </ul>
    </nav>
    <section>
      <div>
        Total pokemon count - 1,118
      </div>
    </section>
    <footer>
      © Anthony Williams 2022
    </footer>
  </article>
</DocumentFragment>
`;
